Add support for vector extensions to the cluster.txt file written by the Scheduler